--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
-theme: midnight
+theme: jekyll-theme-midnight
+title: [Prospect Heights]
+description: [The purpose of this site is to analyze and look at the data of Prospect heights]
