--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-midnight
+remote_theme: pages-themes/midnight@v0.2.0
 title: [Prospect Heights]
 description: [The purpose of this site is to analyze and look at the data of Prospect heights]
